# Mainstage

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  book.toml  install.sh  main.ms  rustfmt.toml
.github/workflows/: ci-dev.yml  ci.yml  docker.yml  docs.yml  publish.yml  release.yml  vscode-extension.yml
cli/: Cargo.toml  dumped_ast.txt  dumped_ir.txt
cli/src/: commands.rs  disassembler.rs  main.rs  scaffold.rs  ui.rs
cli/src/commands/: build.rs  inspect.rs  mod.rs  run.rs  verify.rs
core/: Cargo.toml
core/benches/: pipeline.rs
core/src/: ast.rs  audit.rs  cache.rs  error.rs  eval.rs  executor.rs  format.rs  grammar.pest  include.rs  lib.rs  matrix.rs  modules.rs  parser.rs  runner.rs  sema.rs  source.rs  status.rs  templates.rs  tools.rs  trivia.rs
core/src/analyzers/: output.rs
core/src/analyzers/acyclic/: mod.rs
core/src/analyzers/semantic/: expr.rs  kind.rs  mod.rs  node.rs  stmt.rs  table.rs
core/src/ast/: expr.rs  node.rs  rules.rs  stmt.rs
core/src/ir/: mod.rs  module.rs  op.rs  value.rs
core/src/ir/bytecode/: mod.rs
core/src/ir/lower/: function_builder.rs  lower_expr.rs  lower_objects.rs  lower_stmt.rs  lowering_context.rs  mod.rs
core/src/ir/opt/: const_canon.rs  const_fold.rs  const_prop.rs  dce.rs  mod.rs
core/src/modules/: external.rs  mod.rs  permissions.rs
core/src/modules/builtin/: env.rs  fs.rs  git.rs  hash.rs  http.rs  json.rs  mod.rs  path.rs  shell.rs  str.rs  time.rs
core/src/modules/plugin/: lint.rs  mod.rs  protocol.rs  tests.rs
core/src/vm/: bytecode.rs  exec.rs  external.rs  inprocess.rs  manifest.rs  mod.rs  op.rs  plugin.rs  value.rs
core/tests/: change_detection.rs  emit_control_and_bytecode.rs  emit_failing_bytecode.rs  eval.rs  examples.rs  format.rs  fuzz.rs  import_as_star.rs  include.rs  lowering_calls.rs  lowering_forin.rs  lowering_loop.rs  lowering_loop_exhaustive.rs  opt_plugin_preserve.rs  parser.rs  plugin_runtime_integration.rs  plugins.rs  runner.rs  sema.rs  stress.rs  template_test.rs  trivia.rs  vm_abi_value_roundtrip.rs  vm_emit_and_run.rs  vm_util_read_glob_workdir.rs
docs/: BENCHMARKS.md  GETTING_STARTED.md  GRAMMAR.md  HERMETICITY.md  INPROCESS_PLUGIN.md  INTROSPECTION.md  MODULES.md  PLUGINS.md  PLUGIN_ABI.md  PLUGIN_INDEX.md  ROADMAP.md  SUMMARY.md  TESTS.md  TOOLING.md  introduction.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/scripts/: copy-server.js
editors/vscode/src/: extension.ts  runStatus.ts  serverResolver.ts
editors/vscode/src/test/: resolver.test.ts  runStatus.test.ts  server.test.ts
editors/vscode/syntaxes/: mainstage.tmLanguage.json
examples/: README.md
examples/data-report/: config.json  main.ms
examples/example_echo/: script.ms
examples/example_list_compilers/: script.ms
examples/example_plugin_use/: dumped_ir.txt  script.ms
examples/example_stage/: script.ms
examples/hello/: main.ms
examples/multi-file/: main.ms
examples/multi-file/components/: backend.ms  frontend.ms
examples/multi-file/components/assets/: site.css
examples/params/: main.ms
examples/plugins/: README.md
examples/plugins/greet/: README.md  greet.py
examples/plugins/wordcount/: README.md  wordcount.py
examples/static-site/: main.ms
examples/typed_array_ops/: script.ms
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
lsp/: Cargo.toml
lsp/src/: analysis.rs  completion.rs  convert.rs  cursor.rs  format.rs  hover.rs  index.rs  lib.rs  main.rs  navigation.rs  server.rs  signature.rs
lsp/tests/: server.rs
packaging/homebrew/: mainstage.rb
packaging/scoop/: mainstage.json
packaging/winget/: ColtMcG1.Mainstage.installer.yaml  ColtMcG1.Mainstage.locale.en-US.yaml  ColtMcG1.Mainstage.yaml  colton-mcgraw.Mainstage.installer.yaml  colton-mcgraw.Mainstage.locale.en-US.yaml  colton-mcgraw.Mainstage.yaml
plugin/asm_plugin/: Cargo.toml
plugin/asm_plugin/src/: lib.rs
plugin/c_plugin/src/: lib.rs
plugin/common/: Cargo.toml
plugin/common/src/: lib.rs  typed.rs
plugin/cpp_plugin/: Cargo.toml  manifest.json
plugin/cpp_plugin/src/: lib.rs  main.rs
plugin/examples/example_c/: CMakeLists.txt  Makefile  README.md  manifest.json  plugin.c
plugin/examples/example_rust/: Cargo.toml  README.md  manifest.json
plugin/examples/example_rust/src/: lib.rs
plugin/stdlib_plugin/: Cargo.toml  manifest.json
plugin/stdlib_plugin/src/: domains.rs  lib.rs  typed.rs  util.rs
tests/: diagnostics.ms  hermetic.ms  stdlib.ms  templates.ms  testing.ms  validation_errors.ms
tests/data/: sample.json
tests/plugin/: greet.sh  main.ms  plugins.toml
