[workspace]
resolver = "2"
members = [
    "core",
    "cli",
    "lsp",
]

[workspace.package]
edition = "2024"
authors = ["Colton McGraw <https://github.com/ColtMcG1>"]
license-file = "LICENSE.md"
repository = "https://github.com/ColtMcG1/mainstage"

[workspace.dependencies]
mainstage_core = { path = "core", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde_json = "1"