[package]
name = "mainstage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[[bin]]
name = "mainstage"
path = "src/main.rs"

[dependencies]
mainstage_core.workspace = true
mainstage_lsp = { path = "../lsp" }
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
chrono = "0.4.24"
# `termination` extends the handler to SIGTERM / SIGHUP, not just SIGINT (Ctrl-C).
ctrlc = { version = "3.5.2", features = ["termination"] }
