[package]
name = "mainstage"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "A declarative build and automation language — scripts describe what to build and how stages relate; the runtime resolves order and skips unchanged work"

[[bin]]
name = "mainstage"
path = "src/main.rs"

[dependencies]
mainstage_core.workspace = true
mainstage_lsp = { path = "../lsp", version = "1.0.0" }
clap = { version = "4.5.49", features = ["derive"] }
console = "0.16.1"
chrono = "0.4.24"
# `termination` extends the handler to SIGTERM / SIGHUP, not just SIGINT (Ctrl-C).
ctrlc = { version = "3.5.2", features = ["termination"] }
