[package]
name = "mainstage_core"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Parser, semantic analysis, and evaluator for the Mainstage build and automation language"

[lib]
name = "mainstage_core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.42"
glob = "0.3"
lazy_static = "1.5.0"
pest = "2.8.3"
pest_derive = "2.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
ureq = "3.3.0"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
