[package]
name = "mainstage_lsp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[[bin]]
name = "mainstage-lsp"
path = "src/main.rs"

[dependencies]
mainstage_core.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
serde_json.workspace = true
