[package]
name = "mainstage_lsp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Language server for the Mainstage build and automation language"

[[bin]]
name = "mainstage-lsp"
path = "src/main.rs"

[dependencies]
mainstage_core.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
serde_json.workspace = true

[dev-dependencies]
# Drive the LspService directly in integration tests: `tower` for the Service /
# ServiceExt API, `futures` to poll the server-to-client notification stream.
tower = { version = "0.4", features = ["util"] }
futures = "0.3"
