[package]
name = "stdlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "stdlib"
crate-type = ["cdylib"]

[dependencies]
mainstage_core = { path = "../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
which = "4"
libc = "0.2"
common = { path = "../common" }

#[dev-dependencies]
tempfile = "3"
